Slider invisible issue fixed

--- a/css/slider.css
+++ b/css/slider.css
@@ -167,7 +167,7 @@ Slider
   transition: transform 0.5s;
 }
 
-@media only screen and (min-width: 768px) and (max-width:1400px) {
+@media only screen and (min-width: 768px){
   #slider {
     height: 90%;
     position: relative;
